@@ -2,16 +2,18 @@
   requests that, through the ICCCM 2.0 manager selection stuff
 - the app menu does not update after a style/theme change without restart.
 - stacking code is buggy (or XFree is buggy)
+- after restart focus is losed or switched to another window. May be related
+  to the one above.
 - save session doesnt work on some platforms (Alpha and Sparc)
 - texture pixmaps are being incorrectly freed somewhere. Either
-fix bug (to support broken MetroX servers) or remove all useless references
-to the Pixmap (to save memory and drop bug compatibility).
+  fix bug (to support broken MetroX servers) or remove all useless references
+  to the Pixmap (to save memory and drop bug compatibility).
 - host information is not saved/honored by the dock or save session stuff.
-It should at least check if the host is the local machine and only save it
-in the session/allow docking it if yes.
+  It should at least check if the host is the local machine and only save it
+  in the session/allow docking it if yes.
 - the SHELL environment variable support in the apps menu was removed
-because of a problem with tcsh. If ~/.tcshrc contains "stty erase ^H",
-it will block and the cmd will not be executed. 
+  because of a problem with tcsh. If ~/.tcshrc contains "stty erase ^H",
+  it will block and the cmd will not be executed. 
 - mouse grab being done in client window (in wWindowResetMouseGrabs())
-instead of the frame window. If grab is done in frame, titlebar buttons
-dont work well
+  instead of the frame window. If grab is done in frame, titlebar buttons
+  dont work well
